--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
     "ng2-charts": "^5.0.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
